Rapid Solutions Inc has been added on the Projects

--- a/index.htm
+++ b/index.htm
@@ -192,6 +192,18 @@
                 <!-- Project Entry -->
                 <div class="col-md-3 col-sm-6">
                     <div class="a-projects-holder">
+                        <a href="https://www.behance.net/gallery/35643943/First-few-projects-on-my-job" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/Op0lal4.jpg" alt="Rapid Solutions Inc"/></a>
+                        <a href="https://www.behance.net/gallery/35643943/First-few-projects-on-my-job" target="_blank" class="a-projects-title">Rapid Solutions Inc</a>
+                        <p>Four templates that I created for my work. A little bit boring because we're following a template.</p>
+                        <div class="a-projects-links">
+                            <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;April 1, 2016</div>
+                            <a href="https://www.behance.net/gallery/35643943/First-few-projects-on-my-job" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
+                        </div>
+                    </div>
+                    <!-- /Project Entry -->
+                <!-- Project Entry -->
+                <div class="col-md-3 col-sm-6">
+                    <div class="a-projects-holder">
                         <a href="https://www.behance.net/gallery/34958619/Speed-Site" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/RtdOcQF.png" alt="Speed Site"/></a>
                         <a href="https://www.behance.net/gallery/34958619/Speed-Site" target="_blank" class="a-projects-title">Speed Site</a>
                         <p>This is just a reference site for my employer. I thought it was worth posting because even though it's simple it shows that I can also apply simple animations.</p>
@@ -203,6 +215,7 @@
                         </div>
                     </div>
                     <!-- /Project Entry -->
+                    <div class="clearfix visible-sm-block"></div>
                     <!-- Project Entry -->
                     <div class="col-md-3 col-sm-6">
                         <div class="a-projects-holder">
@@ -217,7 +230,6 @@
                             </div>
                         </div>
                         <!-- /Project Entry -->
-                        <div class="clearfix visible-sm-block"></div>
                         <!-- Project Entry -->
                         <div class="col-md-3 col-sm-6">
                             <div class="a-projects-holder">
@@ -232,20 +244,6 @@
                                 </div>
                             </div>
                             <!-- /Project Entry -->
-                            <!-- Project Entry -->
-                            <div class="col-md-3 col-sm-6">
-                                <div class="a-projects-holder">
-                                    <a href="#" target="_blank" class="a-projects-image-link"><img src="http://i.imgur.com/TONVBVB.jpg" alt="Lorem Ipsum"/></a>
-                                    <a href="#" target="_blank" class="a-projects-title">Lorem Ipsum</a>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    <div class="a-projects-links">
-                                        <div class="a-projects-date"><i class="fa fa-calendar-o fa-fw" data-toggle="tooltip" data-placement="bottom" title="Date posted"></i>&nbsp;Jan 01, 2000</div>
-                                        <a href="#" target="blank" data-toggle="tooltip" data-placement="bottom" title="Go to Website"><i class="fa fa-link fa-fw"></i></a>
-                                        &nbsp;&nbsp;&nbsp;
-                                        <a href="#" target="_blank" data-toggle="tooltip" data-placement="bottom" title="Details"><i class="fa fa-behance fa-fw"></i></a></div>
-                                    </div>
-                                </div>
-                                <!-- /Project Entry -->
                             </div>
                             <div class="a-projects-more">
                                 <a href="https://www.behance.net/bos-eriko" target="_blank"><i class="fa fa-behance-square fa-fw"></i>&nbsp;View More Projects</a>
