facebook link changed to boserikoreyes

--- a/index.htm
+++ b/index.htm
@@ -52,7 +52,7 @@
                 <li><i class="fa fa-envelope fa-fw"></i>&nbsp;mail@boseriko.com</li>
             </ul>
             <ul class="a-connection-icons">
-                <li><a href="https://www.facebook.com/bos.eriko" target="_blank" class="facebook" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook fa-fw"></i><span class="sr-only">Facebook</span></a></li>
+                <li><a href="https://www.facebook.com/boserikoreyes" target="_blank" class="facebook" data-toggle="tooltip" data-placement="bottom" title="Facebook"><i class="fa fa-facebook fa-fw"></i><span class="sr-only">Facebook</span></a></li>
                 <li><a href="https://plus.google.com/+BosErikoReyes" target="_blank" class="google-plus" data-toggle="tooltip" data-placement="bottom" title="Google+"><i class="fa fa-google-plus fa-fw"></i><span class="sr-only">Google+</span></a></li>
                 <li><a href="https://twitter.com/BosEriko" target="_blank" class="twitter" data-toggle="tooltip" data-placement="bottom" title="Twitter"><i class="fa fa-twitter fa-fw"></i><span class="sr-only">Twitter</span></a></li>
                 <li><a href="http://boseriko.tumblr.com" target="_blank" class="tumblr" data-toggle="tooltip" data-placement="bottom" title="Tumblr"><i class="fa fa-tumblr fa-fw"></i><span class="sr-only">Tumblr</span></a></li>
