Added the word 'LOADING' on the loading screen.

--- a/index.htm
+++ b/index.htm
@@ -298,6 +298,7 @@
                     <div class="sk-cube4 sk-cube"></div>
                     <div class="sk-cube3 sk-cube"></div>
                 </div>
+                <div class="loading-text">LOADING</div>
             </div>
         </div>
     </div>
