Added Force Load option after 5 seconds on loading on the Loading screen.

--- a/index.htm
+++ b/index.htm
@@ -298,9 +298,10 @@
                     <div class="sk-cube4 sk-cube"></div>
                     <div class="sk-cube3 sk-cube"></div>
                 </div>
-                <div class="loading-text">LOADING</div>
+                <div class="loading-text">Loading</div>
             </div>
         </div>
+        <a class="force-load" href="#"><i class="fa fa-fw fa-exclamation-circle" aria-hidden="true"></i> Force Load</a>
     </div>
     <!-- /Loading Screen -->
 
