Changed the blog link from Tumblr to Medium

--- a/index.htm
+++ b/index.htm
@@ -142,7 +142,7 @@
                                     <a class="btn btn-primary btn-lg" href="https://docs.google.com/document/d/14rC5IAxWO574D_QmFox8xhSXYzLR-z4VaUwO01RP8Ng" target="_blank"><i class="fa fa-file-text-o fa-fw" aria-hidden="true"></i> Résumé</a>
                                     <div class="btn-group btn-group-lg" role="group">
                                         <a class="btn btn-default" href="https://twitter.com/BosEriko" target="_blank"><i class="fa fa-twitter fa-fw" aria-hidden="true"></i> Twitter</a>
-                                        <a class="btn btn-default" href="http://boseriko.tumblr.com/" target="_blank"><i class="fa fa-comment fa-fw" aria-hidden="true"></i> Blog</a>
+                                        <a class="btn btn-default" href="https://medium.com/bos-eriko" target="_blank"><i class="fa fa-comment fa-fw" aria-hidden="true"></i> Blog</a>
                                     </div>
                                 </div>
                                 <div class="e-mail">
