--- a/showcase/carmudi-exam/index.html
+++ b/showcase/carmudi-exam/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="MyApp" ng-strict-di>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Carmudi Website">
-    <meta name="keywords" content="Carmudi, Cars, Buy and Sell">
-    <title>Carmudi Catalog</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.css">
-    <link type="text/css" rel="StyleSheet" href="./styles/base.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"><!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
+    <title>my app</title>
+    <style>ul { padding-left: 0; } li { list-style: none; }</style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular.js"></script>
+    <script src="rawgit.com/angular-ui/ui-router/0.2.13/release/angular-ui-router.js"></script>
+    <script>
+      document.write('<base href="'+ document.location.pathname +'" />')
+    </script>
+    <script src="script.js"></script>
   </head>
-  <body ng-app="myApp">
-    <div ng-controller="MainController" class="main">
-      <div ng-repeat="car in cars" class="item-holder">{{ car.id }}</div>
+
+  <body>
+    <div class="main-content" ng-controller="QuestionCtrl">
+      <div id="Content1">
+      <h1>Question 1</h1>
+      <p>{{questions[0].question}}</p>
+      <h2>answer 1</h2>
+      <p>{{questions[0].answers[0].value}}</p>
+      <p>{{questions[0].answers[0].answers}}</p>
+      <h2>answer 2</h2>
+      <p>{{questions[0].answers[1].value}}</p>
+      <p>{{questions[0].answers[1].answers}}</p>
+      </div>
     </div>
-    <!-- Scripts Start-->
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/foundation/6.2.3/foundation.min.js"></script>
-    <script src="./scripts/app.js"></script>
-    <script src="./scripts/angular-app.js"></script>
-    <script src="./scripts/angular-controller.js"></script>
-    <script src="./scripts/cars-directory.js"></script>
-    <!-- Scripts End-->
+
   </body>
 </html>
